force-app/main/default/objects/Student__c/fields/EmergencyContact__c.field-meta.xml
<CustomField>
    <fullName>EmergencyContact__c</fullName>
    <label>Emergency Contact</label>
    <type>TextArea</type>
</CustomField>