force-app/main/default/objects/Student__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which class this student is currently enrolled in.</description>
    <label>Enrollment</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>