force-app/main/default/objects/Student__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>white</fullName>
                <label>White</label>
            </value>
            <value>
                <fullName>black</fullName>
                <label>Black or African-American</label>
            </value>
            <value>
                <fullName>native</fullName>
                <label>American Indian or Alaskan Native</label>
            </value>
            <value>
                <fullName>asian</fullName>
                <label>East Asian (including Southeast Asia)</label>
            </value>
            <value>
                <fullName>pac_islander</fullName>
                <label>Native Hawaiian or Pacific Islander</label>
            </value>
            <value>
                <fullName>hispanic</fullName>
                <label>Hispanic/Latinx</label>
            </value>
            <value>
                <fullName>middle_eastern</fullName>
                <label>Middle Eastern or North African</label>
            </value>
            <value>
                <fullName>south_asian</fullName>
                <label>South Asian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>