force-app/main/default/objects/Student__c/fields/Github__c.field-meta.xml
<CustomField>
    <fullName>Github__c</fullName>
    <label>GitHub Username</label>
    <length>64</length>
    <type>Text</type>
</CustomField>