force-app/main/default/objects/Student__c/fields/Internship__c.field-meta.xml
<CustomField>
    <fullName>Internship__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Assignment of this student to a particular sponsorship.</description>
    <label>Internship</label>
    <referenceTo>Sponsorship__c</referenceTo>
    <relationshipLabel>Interns</relationshipLabel>
    <relationshipName>Interns</relationshipName>
    <type>Lookup</type>
</CustomField>