force-app/main/default/objects/Student__c/fields/LoanStatus__c.field-meta.xml
<CustomField>
    <fullName>LoanStatus__c</fullName>
    <description>Whether this student applied for the loan program, and whether their loan has been paid back.</description>
    <inlineHelpText>Whether this student applied for the loan program, and whether their loan has been paid back.</inlineHelpText>
    <label>Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Loan</fullName>
                <default>true</default>
                <label>No Loan</label>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Paid Back</fullName>
            </value>
            <value>
                <fullName>Defaulted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>