force-app/main/default/objects/Student__c/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <description>Any medical information that is relevant to Ada.</description>
    <inlineHelpText>Any medical information that is relevant to Ada.</inlineHelpText>
    <label>Medical Information</label>
    <type>TextArea</type>
</CustomField>