force-app/main/default/objects/Student__c/fields/PhotoRelease__c.field-meta.xml
<CustomField>
    <fullName>PhotoRelease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this student has given written permission for Ada to use their photo publicly.</description>
    <inlineHelpText>Whether this student has given written permission for Ada to use their photo publicly.</inlineHelpText>
    <label>Photo Release</label>
    <type>Checkbox</type>
</CustomField>