force-app/main/default/objects/Student__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <formula>INCLUDES(Ethnicity__c, "black") ||
INCLUDES(Ethnicity__c, "native") ||
INCLUDES(Ethnicity__c, "asian") ||
INCLUDES(Ethnicity__c, "pac_islander") ||
INCLUDES(Ethnicity__c, "hispanic") ||
INCLUDES(Ethnicity__c, "middle_eastern") ||
INCLUDES(Ethnicity__c, "south_asian")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Person of Color</inlineHelpText>
    <label>POC</label>
    <type>Checkbox</type>
</CustomField>