force-app/main/default/objects/Student__c/fields/PrevOccupation__c.field-meta.xml
<CustomField>
    <fullName>PrevOccupation__c</fullName>
    <label>Previous Occupation</label>
    <length>64</length>
    <type>Text</type>
</CustomField>