force-app/main/default/objects/Student__c/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <label>Pronouns</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>she/her</fullName>
                <default>true</default>
                <label>she/her</label>
            </value>
            <value>
                <fullName>they/them</fullName>
            </value>
            <value>
                <fullName>he/him</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>