force-app/main/default/objects/Student__c/fields/PronounsURL__c.field-meta.xml
<CustomField>
    <fullName>PronounsURL__c</fullName>
    <description>Use this to link to a particular https://pronoun.is/ page when the Pronouns field is "other".</description>
    <label>Pronouns URL</label>
    <type>Url</type>
</CustomField>