force-app/main/default/objects/Student__c/fields/Relocating__c.field-meta.xml
<CustomField>
    <fullName>Relocating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the student is relocating to attend Ada.</description>
    <inlineHelpText>Whether the student is relocating to attend Ada.</inlineHelpText>
    <label>Relocating</label>
    <type>Checkbox</type>
</CustomField>