force-app/main/default/objects/Student__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <label>Twitter Username</label>
    <length>64</length>
    <type>Text</type>
</CustomField>