force-app/main/default/objects/Student__c/fields/URM__c.field-meta.xml
<CustomField>
    <fullName>URM__c</fullName>
    <formula>INCLUDES(Ethnicity__c, "black") ||
INCLUDES(Ethnicity__c, "native") ||
INCLUDES(Ethnicity__c, "pac_islander") ||
INCLUDES(Ethnicity__c, "hispanic")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Under-Represented Minority</inlineHelpText>
    <label>URM</label>
    <type>Checkbox</type>
</CustomField>