force-app/main/default/objects/Student__c/validationRules/pronouns_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>pronouns_must_be_set</fullName>
    <active>true</active>
    <description>When the pronouns field is set to "other", then the pronouns URL must be set.</description>
    <errorConditionFormula>ISPICKVAL(Pronouns__c, "other") &amp;&amp; (LEFT(PronounsURL__c, 19) != "https://pronoun.is/")</errorConditionFormula>
    <errorDisplayField>PronounsURL__c</errorDisplayField>
    <errorMessage>When the pronouns field is set to "other", then the pronouns URL must link to a page on https://pronoun.is/.</errorMessage>
</ValidationRule>